--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.3.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
